Integrado sonarQube para analisis de codigo